# RustStaticMap

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: lib.rs
